--- a/wercker.yml
+++ b/wercker.yml
@@ -1,6 +1,11 @@
 box: wercker/default
 
 build:
-    steps:
-        - shellcheck:
-            files: run.sh
+    # Steps make up the actions in your pipeline
+    # Read more about steps on our dev center:
+    # https://devcenter.wercker.com/development/steps/
+  steps:
+    - script:
+        name: echo
+        code: |
+          echo "hello world!"
