--- a/wercker.yml
+++ b/wercker.yml
@@ -9,10 +9,8 @@
 #        name: echo
 #        code: |
 #          echo "hello world!"
-box:
-  id: essentra/docker-wercker-tools
-  username: $DOCKER_REPO_USER
-  password: $DOCKER_REPO_PASSWORD
+box: debian
+
 build:
     # Steps make up the actions in your pipeline
     # Read more about steps on our dev center:
