--- a/wercker.yml
+++ b/wercker.yml
@@ -1,4 +1,5 @@
-box: wercker/default
+#box: wercker/default
+box: debian
 
 build:
     steps:
@@ -7,3 +8,7 @@ build:
         - script:
             name: prepare output
             code: rm -rf $WERCKER_ROOT/.git
+publish:
+  steps:
+  -internal/publish-step:
+  owner: wercker
