--- a/wercker-step.yml
+++ b/wercker-step.yml
@@ -1,28 +1,3 @@
-name: ssh-tunnel-test
-version: 0.1.3
-description: Open a SSH tunnel for the next command to make use of it.
-keywords:
-  - ssh
-  - tunnel
-  - remote
-  - port
-properties:
-  source-port:
-    type: string
-    required: false
-  destination-port:
-    type: string
-    required: false
-  destination-host:
-    type: string
-    required: false
-  connection-string:
-    type: string
-    required: false
-  connection-port:
-    type: string
-    required: false
-  keepalive:
-    type: string
-    required: false
-
+name: Test
+version: 0.0.1
+description: Test
