--- a/wercker.yml
+++ b/wercker.yml
@@ -13,4 +13,4 @@ publish:
    - install-packages:
         packages: ca-certificates
    - internal/publish-step:
-       owner: wercker
+       owner: iradu
