--- a/wercker.yml
+++ b/wercker.yml
@@ -1,5 +1,9 @@
-box: wercker/default
+box: debian:stable-slim
 build:
   steps:
    - shellcheck:
        files: run.sh
+publish:
+  steps:
+    - internal/publish-step:
+        owner: wercker
