--- a/step.yml
+++ b/step.yml
@@ -1,5 +1,5 @@
 name: git-tag-commit
-version: 0.0.4
+version: 0.0.5
 summary: Adds a tag to a given commit
 keywords:
   - tag
@@ -8,13 +8,16 @@ keywords:
 properties:
   - name: message
     type: string
-    required: false
+    required: true
   - name: repository
     type: string
-    required: false
+    required: true
   - name: branch
     type: string
-    required: false
+    required: true
   - name: commmit
     type: string
-    required: false
+    required: true
+  - name: user
+    type: string
+    required: true
